-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.2.0-rc1
-
None
-
c7e60546018ffbe75363a803e29884ab4ad545fb
- Start current Qt Creator from the 4.2 branch
- Open qtcreator.qbs from the current 4.2 branch
==> Crash.
See attached stacktrace, thread 1.
Reverting https://codereview.qt-project.org/177569 helps.
| For Gerrit Dashboard: QTCREATORBUG-17339 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 177698,2 | QbsProjectManager: Fix potential crash | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |